--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-  <p>&copy; 2025 Your Name · Built with ❤️ and Jekyll</p>
+  <p>&copy; 2025 Zhangyulin · Built with ❤️ and Jekyll</p>
 </footer>
