docs: 为笔记添加日期字段并更新样式
为所有笔记文件添加日期字段，并在默认布局中显示日期
添加.post-meta样式类以美化日期显示

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,9 @@
   {% include header.html %}
 
   <main class="container">
+    {% if page.date %}
+      <p class="post-meta">{{ page.date | date: "%B %d, %Y" }}</p>
+    {% endif %}
     {{ content }}
   </main>
 
